# VisionTools

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .set_python_path.sh  .travis.yml  CMakeLists.txt  README.md
cmake/: flags.cmake
datareader/: CMakeLists.txt  README.md  build.sh  setup.py
datareader/cpp/: libpytransform.pyx
datareader/cpp/include/: baseprocess.h  concurrent.h  image_transformer.h  image_util.h  logger.h  lua_util.h  transformer.h  util.h
datareader/cpp/src/: baseimage.cpp  concurrent.cpp  image_transformer.cpp  image_util.cpp  imageprocess.cpp  lua_util.cpp  luacvprocess.cpp  transformer.cpp  util.cpp
datareader/python/datareader/example/: imagenet_demo.py
datareader/python/datareader/misc/: filetool.py  imagetool.py  kvtool.py
datareader/python/datareader/operator/: __init__.py  ops.py
datareader/python/datareader/operators/: __init__.py  base.py  pil_ops.py
datareader/python/datareader/pipeline/: __init__.py  decorator.py  pipeline.py
datareader/python/datareader/shared_memory/: shared_xmap.py  sharedmemory.py
datareader/python/datareader/source/: __init__.py  file_reader.py  local_source.py  source.py
datareader/python/datareader/test/: test.lua  test_fast_xmap.py  test_imagenet.py  test_operators.py  test_pytransform.py  test_sharedmemory.py
datareader/python/datareader/transformer/: pytransformer.py
datareader/python/visreader/example/: imagenet_demo.py
datareader/python/visreader/operators/: opencv_ops.py
datareader/python/visreader/pipeline/: decorator.py
datareader/python/visreader/shared_queue/: queue.py
datareader/python/visreader/source/: __init__.py
datareader/python/visreader/test/: test_dataset.py  test_imagenet.py  test_operators.py  test_pytransform.py  test_sharedqueue.py
datareader/python/visreader/transformer/: pytransformer.py
datareader/tests/: test_imagenet.py
datareader/tests/data/seqfile/: part-00001.seqfile
datareader/tools/: jpeg2seqfile.py  seqfile2jpeg.py
transformer/: CMakeLists.txt  DataTransformer.cpp  DataTransformer.h  Parallel.h  PyDecodejpeg.cpp  Queue.h  ThreadPool.h  main.cpp
transformer/tests/: CMakeLists.txt  test_dejpeg.py
visreader/: README.md  build.sh  requirements.txt  setup.py
visreader/cpp/: libpytransform.pyx
visreader/cpp/include/: image_util.h  imageprocess.h  logger.h  lua_util.h  luacvprocess.h  util.h
visreader/cpp/src/: baseimage.cpp  image_transformer.cpp  image_util.cpp  imageprocess.cpp  lua_util.cpp  transformer.cpp  util.cpp
visreader/python/visreader/: __init__.py
visreader/python/visreader/example/: imagenet_demo.py
visreader/python/visreader/misc/: __init__.py
visreader/python/visreader/operators/: __init__.py  base.py
visreader/python/visreader/pipeline/: __init__.py  decorator.py  pipeline.py
visreader/python/visreader/reader_builder/: __init__.py  imagenet.py  reader_builder.py
visreader/python/visreader/reader_builder/coco/: __init__.py  coco.py
visreader/python/visreader/reader_builder/imagenet/: __init__.py  imagenet.py
visreader/python/visreader/shared_queue/: __init__.py  queue.py  sharedmemory.py
visreader/python/visreader/source/: source.py
visreader/python/visreader/test/: run_all_tests.py  seqdata.py  set_env.py  test.lua  test_coco.py  test_dataset.py  test_imagenet.py  test_operators.py  test_pipeline.py  test_pytransform.py  test_pytransformer.py  test_reader_builder.py  test_sharedqueue.py
visreader/tests/data/seqfile/: README  part-00002.seqfile
